<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|top"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:textSize="35dp"
        android:gravity="center"
        android:textStyle="bold"/>
    <View
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:background="#33B5E5"
        />
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/enable_auto" />
                <Switch android:id="@+id/enable_auto_boot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textOn="On"
                    android:textOff="Off" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:layout_alignParentLeft="true"
                    android:text="@string/delay" />
                <View android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
                <Button android:id="@+id/seconds_rm"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:text="-"
                    android:textSize="30dp"
                    android:onClick="on_rmSeconds_clicked"/>
                <TextView android:id="@+id/seconds"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="10s"
                    android:textSize="20dp"/>
                <Button android:id="@+id/seconds_add"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:text="+"
                    android:textSize="30dp"
                    android:onClick="on_addSeconds_clicked"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/rom" />
                <Spinner
                    android:id="@+id/auto_rom_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:spinnerMode="dropdown"/>
            </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/installed_roms"
        android:textSize="35dp"
        android:gravity="center"
        android:textStyle="bold"/>
    <View
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:background="#33B5E5"
        />
     <LinearLayout android:id="@+id/no_installed_roms"
         android:layout_width="fill_parent"
         android:layout_height="200dp"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dip"
             android:gravity="center"
             android:text="@string/no_roms"/>
         <Button
             android:id="@+id/add_rom_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/add_rom"
             android:layout_marginTop="10dip"
             android:onClick="on_addRom_clicked" />
    </LinearLayout>
    <!--<ListView android:id="@+id/rom_list"
        android:layout_width="500dp"
        android:layout_height="fill_parent" />-->
    <ScrollView android:layout_width="500dp"
        android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/rom_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>
</LinearLayout>

